# haskellbook-solutions

./: .gitignore  README.md  haskellbook-solutions.cabal
02 - Hello Haskell/: chapterExercises.hs
04 - Basic Datatypes/: absoluteValue.hs  palindrome.hs
06 - Type Classes/: exercises65.hs  weekdays.hs
08 - Recursion/: chapterExercises.hs
09 - Lists/: charFuncs.hs  cipher.hs  filterLists.hs  mapBool.hs  splitStrings.hs  standardFuncs.hs
10 - Folding Lists/: folds.hs
11 - Algebraic Datatypes/: asPatterns.hs  binaryTrees.hs  programmers.hs  tooMany.hs  vigenere.hs
12 - Signaling Adversity/: libForEither.hs  libForMaybe.hs  validateWord.hs
13 - Building Projects/: mkPerson.hs
src/Ch02HelloHaskell/: circleArea.hs  letToWhere.hs
src/Ch03Strings/: areaScope.hs
src/Ch06TypeClasses/: trivialTypeClass.hs
src/Ch07MoreFunctional/: arith4.hs  chapterExercises.hs
src/Ch08Recursion/: chapterExercises.hs
src/Ch09Lists/: cipher.hs  listComprehensions.hs  zipping.hs
src/Ch10FoldingLists/: database.hs  fibScan.hs  stopAndVowel.hs
src/Ch11AlgebraicDatatypes/: huttonsRazor.hs  language.hs  phone.hs  vehicles.hs  vigenere.hs
src/Ch12SignalingAdversity/: forLinguists.hs  iterateAndUnfold.hs  libForMaybe.hs  natural.hs  unfoldTrees.hs
src/Ch13BuildingProjects/: palindrome.hs
src/Ch14Testing/: generators.hs  multTestSpec.hs  quickCheckTests.hs  testCiphers.hs  validateNumbersIntoWords.hs
src/Ch15MonoidSemigroup/: firstPrime.hs  monoidExercises.hs  optional.hs  quickCheckHelpers.hs  semigroupExercises.hs
src/Ch16Functor/: chapterExercises.hs  heavyLifting.hs  (+2 more)
(+13 files in other folders)
