name:           haskellbook-solutions
version:        0.1.0.0
license-file:   LICENSE
author:         Paul Grillenberger
maintainer:     some@guy.de
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                  , hspec
  hs-source-dirs:   src
  default-language: Haskell2010
